[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/enemies/Bat.png" type="Texture" id=2]
[ext_resource path="res://scripts/enemies/Bat.gd" type="Script" id=5]

[sub_resource type="Animation" id=3]
resource_name = "die"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=1]
resource_name = "fly"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[node name="Bat" groups=[
"bat",
] instance=ExtResource( 1 )]
script = ExtResource( 5 )
health = 2

[node name="Sprite" parent="." index="0"]
position = Vector2( 0, 0 )
texture = ExtResource( 2 )
vframes = 7
frame = 3

[node name="CollisionShape2D" parent="." index="1"]
visible = true
position = Vector2( 0, 0 )

[node name="AnimationPlayer" parent="." index="2"]
anims/die = SubResource( 3 )
anims/fly = SubResource( 1 )
anims/idle = SubResource( 2 )

[node name="VisibilityNotifier2D" parent="." index="4"]
visible = false
position = Vector2( -1, 0 )
scale = Vector2( 1.15, 1.2 )

[node name="RightRayCast" type="RayCast2D" parent="." index="5"]
position = Vector2( 8, 0 )
enabled = true
cast_to = Vector2( 4, 0 )

[node name="LeftRayCast" type="RayCast2D" parent="." index="6"]
position = Vector2( -8, 0 )
enabled = true
cast_to = Vector2( -4, 0 )

[node name="UpRayCast" type="RayCast2D" parent="." index="7"]
position = Vector2( 0, -7 )
enabled = true
cast_to = Vector2( 0, -4 )

[node name="DownRayCast" type="RayCast2D" parent="." index="8"]
position = Vector2( 0, 7 )
enabled = true
cast_to = Vector2( 0, 4 )

[node name="Hitbox" parent="." index="9"]
visible = false

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, 0 )
